<resources>
    <string name="app_name">NetworkCalcApp</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="division">/</string>
    <string name="num_4">4</string>
    <string name="num_5" >5</string>
    <string name="num_6">6</string>
    <string name="multiplicacion">*</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="menos">-</string>
    <string name="num_0">0</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="mas">+</string>
</resources>
